--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="w3-col l6 w3-padding-large">
           <h1 class="w3-center">Our Menu</h1>
           <br />
-          <h4>Bread Basket</h4>
+          <h4>Bauet Bread Basket</h4>
           <p class="w3-text-grey">
             Assortment of fresh baked fruit breads and muffins 5.50
           </p>
